HMIN104/td/ANTLR/AST/src/LanguageParser.java
// Generated from /home/thomas/IdeaProjects/AST/src/Language.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class LanguageParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		Number=39, Name=40, WS=41;
	public static final int
		RULE_listExpr = 0, RULE_listParam = 1, RULE_listVar = 2, RULE_listProcs = 3, 
		RULE_program = 4, RULE_proc = 5, RULE_instruction = 6, RULE_expression = 7, 
		RULE_ternaryCond = 8, RULE_appel = 9, RULE_fonctionExpr = 10, RULE_fonctionIns = 11, 
		RULE_param = 12, RULE_variable = 13, RULE_constante = 14, RULE_type = 15;
	private static String[] makeRuleNames() {
		return new String[] {
			"listExpr", "listParam", "listVar", "listProcs", "program", "proc", "instruction", 
			"expression", "ternaryCond", "appel", "fonctionExpr", "fonctionIns", 
			"param", "variable", "constante", "type"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "' ('", "') :'", "':='", "'['", "'] := '", "'while'", "'do'", "'skip'", 
			"';'", "'-'", "'not'", "'+'", "'*'", "'/'", "'and'", "'<'", "'<='", "'='", 
			"'!='", "'>='", "'>'", "']'", "'new array of'", "'if'", "'then'", "'else'", 
			"'read'", "'write'", "'('", "')'", "'()'", "':'", "'var'", "'true'", 
			"'false'", "'integer'", "'boolean'", "'array of '"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, "Number", "Name", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Language.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LanguageParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ListExprContext extends ParserRuleContext {
		public ArrayList<Expr> l_expr;
		public ExpressionContext e;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public ListExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LanguageListener ) ((LanguageListener)listener).enterListExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LanguageListener ) ((LanguageListener)listener).exitListExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LanguageVisitor ) return ((LanguageVisitor<? extends T>)visitor).visitListExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListExprContext listExpr() throws RecognitionException {
		ListExprContext _localctx = new ListExprContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_listExpr);
		 ((ListExprContext)_localctx).l_expr =  new ArrayList<Expr>(); 
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(35); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(32);
				((ListExprContext)_localctx).e = expression(0);
				 _localctx.l_expr.add(((ListExprContext)_localctx).e.e);
				}
				}
				setState(37); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__9) | (1L << T__10) | (1L << T__22) | (1L << T__26) | (1L << T__27) | (1L << T__33) | (1L << T__34) | (1L << Number) | (1L << Name))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListParamContext extends ParserRuleContext {
		public ArrayList<Param> l_params;
		public ParamContext a;
		public List<ParamContext> param() {
			return getRuleContexts(ParamContext.class);
		}
		public ParamContext param(int i) {
			return getRuleContext(ParamContext.class,i);
		}
		public ListParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listParam; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LanguageListener ) ((LanguageListener)listener).enterListParam(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LanguageListener ) ((LanguageListener)listener).exitListParam(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LanguageVisitor ) return ((LanguageVisitor<? extends T>)visitor).visitListParam(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListParamContext listParam() throws RecognitionException {
		ListParamContext _localctx = new ListParamContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_listParam);
		 ((ListParamContext)_localctx).l_params =  new ArrayList<Param>(); 
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(42); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(39);
					((ListParamContext)_localctx).a = param();
					 _localctx.l_params.add(((ListParamContext)_localctx).a.p);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(44); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListVarContext extends ParserRuleContext {
		public ArrayList<Variable> l_vars;
		public VariableContext v;
		public List<VariableContext> variable() {
			return getRuleContexts(VariableContext.class);
		}
		public VariableContext variable(int i) {
			return getRuleContext(VariableContext.class,i);
		}
		public ListVarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listVar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LanguageListener ) ((LanguageListener)listener).enterListVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LanguageListener ) ((LanguageListener)listener).exitListVar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LanguageVisitor ) return ((LanguageVisitor<? extends T>)visitor).visitListVar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListVarContext listVar() throws RecognitionException {
		ListVarContext _localctx = new ListVarContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_listVar);
		 ((ListVarContext)_localctx).l_vars =  new ArrayList<Variable>(); 
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(46);
				((ListVarContext)_localctx).v = variable();
				 _localctx.l_vars.add(((ListVarContext)_localctx).v.var);
				}
				}
				setState(51); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__32 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListProcsContext extends ParserRuleContext {
		public ArrayList<Proc> l_procs;
		public ProcContext p;
		public List<ProcContext> proc() {
			return getRuleContexts(ProcContext.class);
		}
		public ProcContext proc(int i) {
			return getRuleContext(ProcContext.class,i);
		}
		public ListProcsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listProcs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LanguageListener ) ((LanguageListener)listener).enterListProcs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LanguageListener ) ((LanguageListener)listener).exitListProcs(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LanguageVisitor ) return ((LanguageVisitor<? extends T>)visitor).visitListProcs(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListProcsContext listProcs() throws RecognitionException {
		ListProcsContext _localctx = new ListProcsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_listProcs);
		 ((ListProcsContext)_localctx).l_procs =  new ArrayList<Proc>(); 
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(56); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(53);
					((ListProcsContext)_localctx).p = proc();
					_localctx.l_procs.add(((ListProcsContext)_localctx).p.prc);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(58); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramContext extends ParserRuleContext {
		public Program pr;
		public VariableContext lvar;
		public ListProcsContext ldef;
		public InstructionContext i;
		public ListProcsContext linst;
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public ListProcsContext listProcs() {
			return getRuleContext(ListProcsContext.class,0);
		}
		public InstructionContext instruction() {
			return getRuleContext(InstructionContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LanguageListener ) ((LanguageListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LanguageListener ) ((LanguageListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LanguageVisitor ) return ((LanguageVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_program);
		try {
			setState(76);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(60);
				((ProgramContext)_localctx).lvar = variable();
				setState(61);
				((ProgramContext)_localctx).ldef = listProcs();
				setState(62);
				((ProgramContext)_localctx).i = instruction(0);
				((ProgramContext)_localctx).pr =  new Program(((ProgramContext)_localctx).lvar.var, ((ProgramContext)_localctx).ldef.l_procs, ((ProgramContext)_localctx).i.i);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(65);
				((ProgramContext)_localctx).linst = listProcs();
				setState(66);
				((ProgramContext)_localctx).i = instruction(0);
				((ProgramContext)_localctx).pr =  new Program(((ProgramContext)_localctx).linst.l_procs, ((ProgramContext)_localctx).i.i);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(69);
				((ProgramContext)_localctx).ldef = listProcs();
				setState(70);
				((ProgramContext)_localctx).i = instruction(0);
				((ProgramContext)_localctx).pr =  new Program(((ProgramContext)_localctx).ldef.l_procs, ((ProgramContext)_localctx).i.i);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(73);
				((ProgramContext)_localctx).i = instruction(0);
				((ProgramContext)_localctx).pr =  new Program(((ProgramContext)_localctx).i.i);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProcContext extends ParserRuleContext {
		public Proc prc;
		public Token n;
		public ListParamContext lp;
		public TypeContext t;
		public ListVarContext lv;
		public InstructionContext i;
		public TerminalNode Name() { return getToken(LanguageParser.Name, 0); }
		public ListParamContext listParam() {
			return getRuleContext(ListParamContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public ListVarContext listVar() {
			return getRuleContext(ListVarContext.class,0);
		}
		public InstructionContext instruction() {
			return getRuleContext(InstructionContext.class,0);
		}
		public ProcContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_proc; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LanguageListener ) ((LanguageListener)listener).enterProc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LanguageListener ) ((LanguageListener)listener).exitProc(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LanguageVisitor ) return ((LanguageVisitor<? extends T>)visitor).visitProc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProcContext proc() throws RecognitionException {
		ProcContext _localctx = new ProcContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_proc);
		try {
			setState(138);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(78);
				((ProcContext)_localctx).n = match(Name);
				setState(79);
				match(T__0);
				setState(80);
				((ProcContext)_localctx).lp = listParam();
				setState(81);
				match(T__1);
				setState(82);
				((ProcContext)_localctx).t = type();
				setState(83);
				((ProcContext)_localctx).lv = listVar();
				setState(84);
				((ProcContext)_localctx).i = instruction(0);
				((ProcContext)_localctx).prc =  new Proc((((ProcContext)_localctx).n!=null?((ProcContext)_localctx).n.getText():null), ((ProcContext)_localctx).lp.l_params, ((ProcContext)_localctx).t.t, ((ProcContext)_localctx).lv.l_vars, ((ProcContext)_localctx).i.i);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(87);
				((ProcContext)_localctx).n = match(Name);
				setState(88);
				match(T__0);
				setState(89);
				match(T__1);
				setState(90);
				((ProcContext)_localctx).t = type();
				setState(91);
				((ProcContext)_localctx).lv = listVar();
				setState(92);
				((ProcContext)_localctx).i = instruction(0);
				((ProcContext)_localctx).prc =  new Proc((((ProcContext)_localctx).n!=null?((ProcContext)_localctx).n.getText():null), ((ProcContext)_localctx).t.t, ((ProcContext)_localctx).lv.l_vars, ((ProcContext)_localctx).i.i);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(95);
				((ProcContext)_localctx).n = match(Name);
				setState(96);
				match(T__0);
				setState(97);
				((ProcContext)_localctx).lp = listParam();
				setState(98);
				match(T__1);
				setState(99);
				((ProcContext)_localctx).lv = listVar();
				setState(100);
				((ProcContext)_localctx).i = instruction(0);
				((ProcContext)_localctx).prc =  new Proc((((ProcContext)_localctx).n!=null?((ProcContext)_localctx).n.getText():null), ((ProcContext)_localctx).lp.l_params, ((ProcContext)_localctx).lv.l_vars, ((ProcContext)_localctx).i.i);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(103);
				((ProcContext)_localctx).n = match(Name);
				setState(104);
				match(T__0);
				setState(105);
				match(T__1);
				setState(106);
				((ProcContext)_localctx).lv = listVar();
				setState(107);
				((ProcContext)_localctx).i = instruction(0);
				((ProcContext)_localctx).prc =  new Proc((((ProcContext)_localctx).n!=null?((ProcContext)_localctx).n.getText():null), ((ProcContext)_localctx).lv.l_vars, ((ProcContext)_localctx).i.i);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(110);
				((ProcContext)_localctx).n = match(Name);
				setState(111);
				match(T__0);
				setState(112);
				((ProcContext)_localctx).lp = listParam();
				setState(113);
				match(T__1);
				setState(114);
				((ProcContext)_localctx).t = type();
				setState(115);
				((ProcContext)_localctx).i = instruction(0);
				((ProcContext)_localctx).prc =  new Proc((((ProcContext)_localctx).n!=null?((ProcContext)_localctx).n.getText():null), ((ProcContext)_localctx).lp.l_params, ((ProcContext)_localctx).t.t, ((ProcContext)_localctx).i.i);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(118);
				((ProcContext)_localctx).n = match(Name);
				setState(119);
				match(T__0);
				setState(120);
				match(T__1);
				setState(121);
				((ProcContext)_localctx).t = type();
				setState(122);
				((ProcContext)_localctx).i = instruction(0);
				((ProcContext)_localctx).prc =  new Proc((((ProcContext)_localctx).n!=null?((ProcContext)_localctx).n.getText():null), ((ProcContext)_localctx).t.t, ((ProcContext)_localctx).i.i);
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(125);
				((ProcContext)_localctx).n = match(Name);
				setState(126);
				match(T__0);
				setState(127);
				((ProcContext)_localctx).lp = listParam();
				setState(128);
				match(T__1);
				setState(129);
				((ProcContext)_localctx).i = instruction(0);
				((ProcContext)_localctx).prc =  new Proc((((ProcContext)_localctx).n!=null?((ProcContext)_localctx).n.getText():null), ((ProcContext)_localctx).i.i, ((ProcContext)_localctx).lp.l_params);
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(132);
				((ProcContext)_localctx).n = match(Name);
				setState(133);
				match(T__0);
				setState(134);
				match(T__1);
				setState(135);
				((ProcContext)_localctx).i = instruction(0);
				((ProcContext)_localctx).prc =  new Proc((((ProcContext)_localctx).n!=null?((ProcContext)_localctx).n.getText():null), ((ProcContext)_localctx).i.i);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstructionContext extends ParserRuleContext {
		public Inst i;
		public InstructionContext i1;
		public Token n;
		public ExpressionContext e1;
		public TernaryCondContext itern;
		public FonctionInsContext ifonc;
		public ExpressionContext e2;
		public ExpressionContext e3;
		public ExpressionContext e;
		public InstructionContext i2;
		public TerminalNode Name() { return getToken(LanguageParser.Name, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TernaryCondContext ternaryCond() {
			return getRuleContext(TernaryCondContext.class,0);
		}
		public FonctionInsContext fonctionIns() {
			return getRuleContext(FonctionInsContext.class,0);
		}
		public List<InstructionContext> instruction() {
			return getRuleContexts(InstructionContext.class);
		}
		public InstructionContext instruction(int i) {
			return getRuleContext(InstructionContext.class,i);
		}
		public InstructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LanguageListener ) ((LanguageListener)listener).enterInstruction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LanguageListener ) ((LanguageListener)listener).exitInstruction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LanguageVisitor ) return ((LanguageVisitor<? extends T>)visitor).visitInstruction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstructionContext instruction() throws RecognitionException {
		return instruction(0);
	}
